nullaway_error_C8BA9C3E-AC67-44ED-B631-1A2609D325A5.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-aop/src/main/java/org/springframework/aop/support/annotation/AnnotationMatchingPointcut.java:172: error: [NullAway] assigning @Nullable expression to @NonNull field
			this.annotationType = annotationType;
			                    ^
    (see http://t.uber.com/nullaway )
